--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Curso Presencial de Maquiagem em Campina Grande-PB" />
+    <meta property="og:url" content="https://landing-page-curso-evelyn.vercel.app/" />
+    <meta property="og:image" content="https://landing-page-curso-evelyn.vercel.app/assets/slider-02-DUxlzUE7.jpg" />
+    <meta property="og:description" content="Vou lhe ensinar presencialmente, todas as minhas técnicas de maquiagem que utilizo em minhas clientes que estão fazendo muito sucesso." />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet" />
+    <link rel="canonical" href="https://landing-page-curso-evelyn.vercel.app/" />
 
-    <title>Vite + React + TS</title>
+    <title>Curso de Maquiagem Profissional Presencial Campina Grande - PB </title>
+    <meta name="description" content="Vou lhe ensinar presencialmente, todas as minhas técnicas de maquiagem que utilizo em minhas clientes que estão fazendo muito sucesso." />
+
   </head>
   <body>
     <div id="root"></div>
